--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,21 @@
     "require": {
         "symfony/http-kernel": "^3.1",
         "symfony/config": "^3.1",
-        "symfony/yaml": "^3.1"
+        "symfony/yaml": "^3.1",
+        "incenteev/composer-parameter-handler": "~2.0"
+    },
+    "scripts": {
+        "post-install-cmd": [
+            "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters"
+        ],
+        "post-update-cmd": [
+            "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters"
+        ]
+    },
+    "extra": {
+        "incenteev-parameters": {
+            "file": "config.yml",
+            "parameter-key": "esidebugger"
+        }
     }
 }
